force-app/main/default/objects/HDT_Parametros__c/HDT_Parametros__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>HDT_Parametros</label>
</CustomObject>