force-app/main/default/objects/HDT_Parametros__c/fields/HDT_Activo__c.field-meta.xml
<CustomField>
    <fullName>HDT_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo utilizado para validar si está activo para aplicarlo o no</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>