force-app/main/default/objects/HDT_Parametros__c/fields/HDT_Configuracion_1__c.field-meta.xml
<CustomField>
    <fullName>HDT_Configuracion_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Configuración_1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>