force-app/main/default/objects/HDT_Parametros__c/fields/HDT_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>HDT_Descripcion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <length>100</length>
    <type>Text</type>
</CustomField>