force-app/main/default/objects/HDT_Parametros__c/fields/HDT_Negocio__c.field-meta.xml
<CustomField>
    <fullName>HDT_Negocio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Negocio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>