force-app/main/default/objects/HDT_Parametros__c/listViews/CBK_Search.listView-meta.xml
<ListView>
    <fullName>CBK_Search</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>HDT_Configuracion_1__c</columns>
    <columns>HDT_Configuracion_2__c</columns>
    <columns>HDT_Configuracion_3__c</columns>
    <columns>HDT_Descripcion__c</columns>
    <columns>HDT_Negocio__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>CBK_Search</label>
    <language>en_US</language>
</ListView>